--- a/bio.html
+++ b/bio.html
@@ -27,34 +27,36 @@
             </button>
         </div>
     </nav>
-    <h1 class="heading">A Little About Me</h1>
-    <div class="row">
-        <div class="column about">
-            <p>Hey, I'm Ted. I'm a Software Developer from Chicago. I graduated from Eastern Illinois University, with a degree
-                in education.</p>
-            <p>However, I found that whenever I had extra time, all I wanted to do was learn code and teach myself new ways
-                to design websites. In 2021, I decided to put my full attention into the career that makes me happy, and
-                enrolled in General Assembly's Software Engineering Bootcamp.</p>
-            <p>I currently live with my wife, Jessi, in Westmont Illinois, about an hour outside of Chicago. I moved here in
-                2014 after living in southern Illinois before that.</p>
-            <p>If you're in the area, I'd love to have a cup of coffee! </p>
-            <p>Check out some of the
-                <a href="projects.html"> projects</a> I'm building! These are currently being built with Javascript/jQuery,and will be updated frequently
-                as I learn new technoligies.</p>
+    <section>
+        <h1 class="heading">A Little About Me</h1>
+        <div class="row">
+            <div class="column about">
+                <p>Hey, I'm Ted. I'm a Software Developer from Chicago. I graduated from Eastern Illinois University, with a
+                    degree in education.</p>
+                <p>However, I found that whenever I had extra time, all I wanted to do was learn code and teach myself new ways
+                    to design websites. In 2021, I decided to put my full attention into the career that makes me happy,
+                    and enrolled in General Assembly's Software Engineering Bootcamp.</p>
+                <p>I currently live with my wife, Jessi, in Westmont Illinois, about an hour outside of Chicago. I moved here
+                    in 2014 after living in southern Illinois before that.</p>
+                <p>If you're in the area, I'd love to have a cup of coffee! </p>
+                <p>Check out some of the
+                    <a href="projects.html"> projects</a> I'm building! These are currently being built with Javascript/jQuery,and will be updated
+                    frequently as I learn new technoligies.</p>
 
+            </div>
+            <div class="column">
+                <img id="cubs" src="/imgs/ted-wife-cubs.jpg" alt="Ted's Signature">
+            </div>
         </div>
-        <div class="column">
-            <img id="cubs" src="/imgs/ted-wife-cubs.jpg" alt="Ted's Signature">
+        <div id="sig">
+            <img src="/imgs/sig.png" alt="Ted's Signature">
         </div>
-    </div>
-    <div id="sig">
-        <img src="/imgs/sig.png" alt="Ted's Signature">
-    </div>
+    </section>
 
 
     <!--Footer-->
     <footer>
-        <div class="footer-content">
+        <div class="footerContent">
             <h3>Ted McGinness</h3>
             <p></p>
 
