--- a/bio.html
+++ b/bio.html
@@ -45,11 +45,11 @@
 
             </div>
             <div class="column">
-                <img id="cubs" src="/imgs/ted-wife-cubs.jpg" alt="Ted's Signature">
+                <img id="cubs" src="./imgs/ted-wife-cubs.jpg" alt="Ted and his wife at Wrigley Field">
             </div>
         </div>
         <div id="sig">
-            <img src="/imgs/sig.png" alt="Ted's Signature">
+            <img src="./imgs/sig.png" alt="Ted's Signature">
         </div>
     </section>
 
