--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="projects.html">Projects</a>
             <a href="resume.html">Resume</a>
             <a href="contact.html">Contact Me</a>
-            <button class="mobile-menu" id="mobile-menu">
+            <button class="mobileMenu" id="mobileMenu">
                 <ion-icon class="bars" name="menu-outline"></ion-icon>
             </button>
         </div>
