--- a/bio.html
+++ b/bio.html
@@ -30,6 +30,7 @@
     <section>
         <h1 class="heading">A Little About Me</h1>
         <div class="row">
+
             <div class="column about">
                 <p>Hey, I'm Ted. I'm a Software Developer from Chicago. I graduated from Eastern Illinois University, with a
                     degree in education.</p>
@@ -44,8 +45,8 @@
                     frequently as I learn new technoligies.</p>
 
             </div>
-            <div class="column">
-                <img id="cubs" src="./imgs/ted-wife-cubs.jpg" alt="Ted and his wife at Wrigley Field">
+            <div class="column cubs">
+
             </div>
         </div>
         <div id="sig">
@@ -62,18 +63,18 @@
 
             <ul class="socials">
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/tmcginness/">
                         <ion-icon name="logo-github"></ion-icon>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/ted-mcginness/">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <ion-icon name="logo-twitter"></ion-icon>
+                    <a target="blank" href="mailto:ttmcginness22@gmail.com">
+                        <ion-icon name="mail-outline"></ion-icon>
                     </a>
                 </li>
             </ul>
