--- a/bio.html
+++ b/bio.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -42,7 +45,7 @@
                 <p>If you're in the area, I'd love to have a cup of coffee! </p>
                 <p>Check out some of the
                     <a href="projects.html"> projects</a> I'm building! These are currently being built with Javascript/jQuery,and will be updated
-                    frequently as I learn new technoligies.</p>
+                    frequently as I learn new technologies.</p>
 
             </div>
             <div class="column cubs">
